// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RowSpan component should render a closed span 1`] = `
<td
  className="table-column row-span-column"
  rowSpan={2}
  style={
    Object {
      "borderLeft": "solid 15px red",
      "maxWidth": 110,
      "minWidth": 110,
      "width": 110,
    }
  }
>
  <div
    className="row-span-container"
  >
    <div
      className="row-span-text"
    >
      Foo
    </div>
    <ForwardRef(WithStyles)
      data-testid="table-toggle-row-btn"
      onClick={[Function]}
    >
      <ForwardRef(WithStyles)>
        keyboard_arrow_right
      </ForwardRef(WithStyles)>
    </ForwardRef(WithStyles)>
  </div>
</td>
`;

exports[`RowSpan component should render an opened span 1`] = `
<td
  className="table-column row-span-column"
  rowSpan={2}
  style={
    Object {
      "borderLeft": "solid 15px initial",
      "maxWidth": 110,
      "minWidth": 110,
      "width": 110,
    }
  }
>
  <div
    className="row-span-container"
  >
    <div
      className="row-span-text"
    >
      Foo
    </div>
    <ForwardRef(WithStyles)
      data-testid="table-toggle-row-btn"
      onClick={[Function]}
    >
      <ForwardRef(WithStyles)>
        keyboard_arrow_down
      </ForwardRef(WithStyles)>
    </ForwardRef(WithStyles)>
  </div>
</td>
`;
